# LiDAR-OBJECT-DETECTION

./: CMakeLists.txt  README.md  object.rviz  package.xml
include/lidar_object_detection/: object_detection.h
launch/: object_detect.launch
src/: main.cpp  object_detection.cpp
